--- a/calc.html
+++ b/calc.html
@@ -21,7 +21,7 @@
               <div class="button all-clear">AC</div>
               <div class="button last-entity-clear">CE</div>
               <div class="button operation">/</div>
-              <div class="button operation">*</div>
+              <div class="button operation">x</div>
               <div class="button number">7</div>
               <div class="button number">8</div>
               <div class="button number">9</div>
